--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,3 +1,7 @@
 @import "./base/settings";
 @import "./base/base";
 @import "./components/container";
+@import "./components/header";
+@import "./components/mainApplet";
+@import "./components/questions";
+@import "./components/submitForm";
