--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -5,3 +5,4 @@
 @import "./components/mainApplet";
 @import "./components/questions";
 @import "./components/submitForm";
+@import "./components/about";
