added count and more style

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -4,7 +4,7 @@ html {
 
 body {
   background-color: white;
-  font-family: sans-serif;
+  font-family: "Open Sans", Roboto, sans-serif;
 }
 
 button {
